SERVER-19906: verify() failure when text index on "_fts" has weights set to empty object